<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupbackground"
    >

    <ImageView
        android:layout_width="140dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:background="@drawable/logo"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/firstname"
        android:textColor="@color/slideTextColor"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/slideTextColor"
        android:backgroundTint="@color/slideTextColor"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/lastname"
        android:textColor="@color/slideTextColor"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/slideTextColor"
        android:backgroundTint="@color/slideTextColor"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/email"
        android:textColor="@color/slideTextColor"
        android:textSize="18sp" />
    <EditText
        android:id="@+id/userlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/slideTextColor"
        android:backgroundTint="@color/slideTextColor"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/pass"
        android:textColor="@color/slideTextColor"
        android:textSize="18sp"/>
    <EditText
        android:id="@+id/passwordlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:textColor="@color/slideTextColor"
        android:backgroundTint="@color/slideTextColor"
        android:inputType="textPassword"        />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/signupbutton"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/slideTextColor"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/slideTextColor"
            android:text="@string/registed"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/btnsignin"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textColor="@color/slideTextColor"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:text="@string/privacy"
        android:textAlignment="center"
        android:textColor="@color/slideTextColor"
        android:textSize="12sp" />

</LinearLayout>
</ScrollView>