<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/barcolor"
        >
        <ImageView
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:src="@drawable/logo"
            android:layout_centerHorizontal="true"
            />
        <Button
            android:id="@+id/profile"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/avatar"
            android:layout_alignParentRight="true"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"

            />

        <Button
            android:id="@+id/hotelbutton"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@color/transparent"
            android:text="@string/menubutton"
            android:textColor="@color/slideTextColor"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="vertical"
        android:background="@drawable/bghotelinfos">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forum"
            android:textAlignment="center"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:textColor="@color/hotelname"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:text="@string/forum_infomation"
            android:textColor="@color/hotelname"
            android:textSize="18sp" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ListView
            android:id="@+id/forumListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/splitlistviewforum"
            android:dividerHeight="2dp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/emptyforum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/emptyforumlist"
            android:textSize="18sp"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            />

    </RelativeLayout>

</LinearLayout>