<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_intro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".IntroActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/act_login"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:visibility="invisible"
        >

        <ImageView
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/logo"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/email"
            android:textColor="@color/slideTextColor"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/userlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/slideTextColor"
            android:backgroundTint="@color/slideTextColor"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:text="@string/pass"
            android:textColor="@color/slideTextColor"
            android:textSize="18sp"/>
        <EditText
            android:id="@+id/passwordlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/slideTextColor"
            android:backgroundTint="@color/slideTextColor"
            android:inputType="textPassword"        />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="20dp"
            android:background="@color/signinbutton"
            android:text="@string/signin"
            android:textColor="@color/slideTextColor"
            android:textSize="20sp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/slideTextColor"
                android:text="@string/notregist"
                android:textSize="18sp"
                />

            <Button
                android:id="@+id/btnregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:fontFamily="sans-serif"
                android:text="@string/clickhere"
                android:textAllCaps="false"
                android:textColor="@color/slideTextColor"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dots_height"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dots_bottom_margin"
        android:gravity="center"
        android:orientation="horizontal">

    </LinearLayout>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="68dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:layout_marginRight="@dimen/button_margin_right"
        android:background="#00FFFFFF"
        android:text="@string/salta"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/id_logo"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/logo"
        />

</RelativeLayout>
