<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bkg"
    >

    <LinearLayout
        android:layout_width="150dp"
        android:layout_height="110dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/splash_icon"
        android:layout_gravity="center_horizontal"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/input_bkg">

        <EditText
            android:id="@+id/userlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="E-mail"
            android:textAlignment="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/colorBlack"
            android:backgroundTint="@color/transparent"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/transparent"
            android:ems="10"
            android:hint="Password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/colorBlack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorBlack"
            />

    </LinearLayout>
    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/signinbutton"
        android:text="@string/signin"
        android:textColor="@color/slideTextColor"
        android:textSize="20sp" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/slideTextColor"
            android:text="@string/notregist"
            android:textSize="18sp"
            />

        <Button
            android:id="@+id/btnregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:fontFamily="sans-serif"
            android:text="@string/clickhere"
            android:textAllCaps="false"
            android:textColor="@color/slideTextColor"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>